tools/canary/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: allcr
  namespace: fortio
spec:
  ports:
    # Standard port for SNI routing in gateways, same as east-west gateway
    - port: 8080
      name: http
      targetPort: 15443
#  selector:
#    app: cloudrun
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  # Custom name, can do traffic split
  name: allcr
  namespace: fortio
spec:
  hosts:
    - allcr
    - allcr.fortio.svc
  http:
    - route:
        - destination:
            host: cloudrun-6c3hzwsnla-uc
          weight: 25
        - destination:
            host: cloudrun2-6c3hzwsnla-uc
          weight: 75
