tools/canary/fortio-in-cluster-plain.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-plain
spec:
  ports:
    - port: 8080
      name: http
    - port: 8081
      name: grpc
  selector:
    app: fortio-plain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-plain
spec:
  selector:
    matchLabels:
      app: fortio-plain
  replicas: 1
  template:
    metadata:
      labels:
        app: fortio-plain
        version: v1
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: fortio
          image: costinm/fortio:latest
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: grpc
            - containerPort: 8079
          args:
            - server
          resources:
            requests:
              cpu: 10m
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "1G"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortio-plain
spec:
  host: fortio-plain
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: fortio-plain
spec:
  selector:
    matchLabels:
      app: fortio-plain
  mtls:
    mode: STRICT
