tools/canary/fortio-in-cluster.template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-${REVISION}
spec:
  ports:
    - port: 8080
      name: http
    - port: 8081
      name: grpc
  selector:
    app: fortio-${REVISION}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-${REVISION}
spec:
  selector:
    matchLabels:
      app: fortio-${REVISION}
  replicas: 1
  template:
    metadata:
      annotations:
        #sidecar.istio.io/logLevel: "TRACE"
        #sidecar.istio.io/enableCoreDump: "true"
        # For debugging
        sidecar.istio.io/privileged: "true"
        #sidecar.istio.io/debug: "true"
        #sidecar.istio.io/componentLogLevel: "config:trace,http2:trace,init:trace,grpc:trace,upstream:trace"

        # Override container ports
        #traffic.sidecar.istio.io/includeInboundPorts: "*"
        sidecar.istio.io/proxyCPU: 10m

      labels:
        app: fortio-${REVISION}
        version: v1
        istio.io/rev: ${REVISION}
    spec:
      containers:
      - name: fortio
        image: costinm/fortio:latest
        ports:
         - containerPort: 8080
           name: http
         - containerPort: 8081
           name: grpc
         - containerPort: 8079
        args:
          - server
        resources:
          requests:
            cpu: 10m
            memory: "512Mi"
          limits:
            cpu: "2"
            memory: "1G"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortio-${REVISION}
spec:
  host: fortio-${REVISION}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: fortio-${REVISION}
spec:
  selector:
    matchLabels:
      app: fortio-${REVISION}
  mtls:
    mode: STRICT
