tools/canary/fortio-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-istio-icq63pqnqq-uc
  namespace: fortio
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 15443
  selector:
    app: fortio-istio

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortio-istio
  namespace: fortio
spec:
  host: fortio-istio-icq63pqnqq-uc.fortio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  namespace: fortio
  name: fortio-istio-icq63pqnqq-uc
spec:
  hosts:
    - fortio-istio-icq63pqnqq-uc.fortio.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - number: 8080
      name: http
      protocol: TLS
      targetPort: 15443
  resolution: STATIC
  workloadSelector:
    labels:
      app: fortio-istio
